--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,14 @@
 			<version>1.4.191</version>
 		</dependency>
 
+		<!-- Dependencies for testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
