--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,22 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hvis</name>
 
+	<issueManagement>
+		<system>github</system>
+		<url>https://github.com/BurningBadger/ch.bfh.bti7081.s2016.blue/issues</url>
+	</issueManagement>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<organization>
+		<name>Team Blue, Spring Semester 2016 @ BFH</name>
+		<url>https://github.com/BurningBadger/ch.bfh.bti7081.s2016.blue</url>
+	</organization>
+
 	<properties>
 		<vaadin.version>7.6.5</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
@@ -122,11 +138,23 @@
 			<version>1.4.191</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 		<!-- Dependencies for testing -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -231,8 +259,65 @@
 					<scanIntervalSeconds>2</scanIntervalSeconds>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<locales>de,en</locales>
+					<!-- <port>9999</port> -->
+					<!-- <tempWebappDirectory>${basedir}/target/site/</tempWebappDirectory> -->
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.9</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<minmemory>128m</minmemory>
+					<maxmemory>512</maxmemory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.17</version>
+				<!-- <executions> -->
+				<!-- <execution> -->
+				<!-- <id>validate</id> -->
+				<!-- <phase>validate</phase> -->
+				<!-- <configuration> -->
+				<!-- <configLocation>checkstyle.xml</configLocation> -->
+				<!-- <encoding>UTF-8</encoding> -->
+				<!-- <consoleOutput>true</consoleOutput> -->
+				<!-- <failsOnError>true</failsOnError> -->
+				<!-- <linkXRef>false</linkXRef> -->
+				<!-- </configuration> -->
+				<!-- <goals> -->
+				<!-- <goal>check</goal> -->
+				<!-- </goals> -->
+				<!-- </execution> -->
+				<!-- </executions> -->
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>3.0.4-SNAPSHOT</version>
+			</plugin>
+		</plugins>
+	</reporting>
 
 	<profiles>
 		<profile>
