--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.17</version>
+				<configuration>
+					<configLocation>checkstyle.xml</configLocation>
+				</configuration>
 				<!-- <executions> -->
 				<!-- <execution> -->
 				<!-- <id>validate</id> -->
